<resources>
    <string name="app_name">SuarezIreneParcial2</string>
    <string name="my_exam_app">My Exam App</string>
    <string name="calculadora">Calculadora</string>
    <string name="mis_monta_as">Mis Montañas</string>
    <string name="borrar">Borrar</string>
    <string name="inv">INV</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="slash">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="login">Login</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="mis_montanas_allcaps">MIS MONTAÑAS</string>
    <string name="n_de_cimas_conquistadas_0">Nº de cimas conquistadas: 0</string>
    <string name="nombre">Nombre</string>
    <string name="altura_m">Altura (m)</string>
</resources>