<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"/>
  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/iniciar_sesi_n"
      android:textSize="24sp"
      android:layout_gravity="center"
      android:layout_weight="1"/>

  <EditText
      android:id="@+id/editUN"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/usuario"
      android:importantForAutofill="no"
      android:inputType="text"
      android:layout_weight="1"/>

  <EditText
      android:id="@+id/editPW"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/contrase_a"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:layout_weight="1"/>

  <Button
      android:id="@+id/loginButton"
      android:layout_width="150dp"
      android:layout_height="30dp"
      android:layout_gravity="center"
      android:text="@string/login"
      android:layout_weight="1"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1" />
</LinearLayout>