<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="30dp"
        android:text="@string/my_exam_app"
        android:textAlignment="center"
        android:textSize="40sp"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/btnCalc"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/calculadora"
        android:scaleType="centerInside"
        tools:src="@drawable/calculadora" />

    <Button
        android:id="@+id/btnMontanas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/mis_monta_as"
        app:cornerRadius="5dp" />
    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="30dp"
        />
</LinearLayout>
